# bookstore-api

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
database/: session.py
models/: _init_.py  book.py
